Actualizar properties para deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,18 @@ server.port=${EUREKA_PORT}
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# Cada cu√°nto Eureka recibe las solicitudes de los microservicios para registrarse
-eureka.instance.lease-renewal-interval-in-seconds=1
+#Configuracion optimizada para cloud run
+#Self-preservation mode deshabilitado para ambientes cloud donde servicios escalan a 0
+
+eureka.server.enable-self-preservation=false
+
+# Configuraci¢n de lease para cliente
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
+
+# Deshabilitar rate limiter para ambientes de desarrollo/staging
+eureka.server.rate-limiter-enabled=false
+
+# Logging para troubleshooting
+logging.level.com.netflix.eureka=DEBUG
+logging.level.com.netflix.discovery=DEBUG
