application.properties edited online with Bitbucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ eureka.client.fetch-registry=false
 
 eureka.server.enable-self-preservation=false
 
-# Configuraci¢n de lease para cliente
+# Configuracion de lease para cliente
 eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=30
 
@@ -23,4 +23,5 @@ eureka.server.rate-limiter-enabled=false
 
 # Logging para troubleshooting
 logging.level.com.netflix.eureka=DEBUG
+
 logging.level.com.netflix.discovery=DEBUG
